###### TWE 5.5-1 RELEASED ######

###### TWE 5.4-6 RELEASED ######
2017-05-15 Sasa Bojanic <sasaboy@together.at>
   # Improved GUI so that boolean properties can be represented by radio-button with the "null" value

###### TWE 5.4-5 RELEASED (2017-04-27) ######
2017-03-30 Anat Usa-ampai <A.Usa-ampai@togetherteam.co.th>
   # NSIS Installation changed so that special characters like | are supported in (branded) project name
   
###### TWE 5.4-4 RELEASED (2017-03-02) ######
2017-02-28 Sasa Bojanic <sasaboy@together.at>
   # Docbook documentation split into several chapters which are included into main document using docbook's xinclude. 
     During the build time, the build procedure merges all the documentation parts together and builds the HTML/PDF documentation
   # xmltask component added to the project

2017-02-14 Sasa Bojanic <sasaboy@together.at>
   # Fixed issue when template activity has deadline defined

2017-02-13 Sasa Bojanic <sasaboy@together.at>
   # Branding procedure improved: now there is deletions.txt file in some branding folders where one can list the files of that group to be deleted
   # When new Deadline is created, the script type is now initially set to text/sharkwfdeadlines

2017-02-02 Sasa Bojanic <sasaboy@together.at>
   # Branding procedure improved to sign the resulting EXE file   
   # Branding procedure improved to replace entries in i18n files and copy the whole file only if it didn't exists
   # Now opening dialog in examples folder if sub-folder xpdl2.1\RealLife haven't been found (the case when having branded version)

2017-01-30 Sasa Bojanic <sasaboy@together.at>
   # Build procedure changed: removed TSL licensed distribution files (no need for it, we are now using 3rd party GPL classes only through the reflection)

2017-01-25 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Fix in SharkXPDLObjectFactory to properly adjust XPDL object properties by creating special extended attribute (JaWE_TYPE) for the custom type objects
