@@ -301,3 +301,5 @@ asynchronousKey=Asynchronous
 synchronousKey=Synchronous
 
 PluginConfigurationKey=Plugin configuration
+
+MAIL_TOOL_AGENT_SIGNINGKey=Signing?
