@@ -292,3 +292,5 @@
 #Missing translation -> synchronousKey=Synchronous
 
 #Missing translation -> PluginConfigurationKey=Plugin configuration
+
+#Missing translation -> MAIL_TOOL_AGENT_SIGNINGKey=Signing?
