@@ -293,3 +293,5 @@
 #Missing translation -> synchronousKey=Synchronous
 
 #Missing translation -> PluginConfigurationKey=Plugin configuration
+
+#Missing translation -> MAIL_TOOL_AGENT_SIGNINGKey=Signing?
