@@ -294,3 +294,5 @@ asynchronousKey=Asinhrono
 synchronousKey=Sinhrono
 
 PluginConfigurationKey=Konfiguracija plug-ina
+
+MAIL_TOOL_AGENT_SIGNINGKey=Potpisivanje?
