@@ -61,6 +61,8 @@ public class SharkConstants {
 
    public static final String EA_MAIL_TOOL_AGENT_SEND_EXECUTION_MODE = "MAIL_TOOL_AGENT_SEND_EXECUTION_MODE";
 
+   public static final String EA_MAIL_TOOL_AGENT_SIGNING = "MAIL_TOOL_AGENT_SIGNING";
+
    public static final String EA_UNSATISFIED_SPLIT_CONDITION_HANDLING_MODE = "UNSATISFIED_SPLIT_CONDITION_HANDLING_MODE";
 
    public static final String EA_ALLOW_UNDEFINED_VARIABLES = "ALLOW_UNDEFINED_VARIABLES";
